infra/k8s/kafka-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: securehealth-kafka-bootstrap
  namespace: securehealth
  labels:
    app: kafka
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    protocol: TCP
    name: plain
  - port: 9093
    targetPort: 9093
    protocol: TCP
    name: tls
  selector:
    strimzi.io/cluster: securehealth-kafka
    strimzi.io/kind: Kafka
    strimzi.io/name: securehealth-kafka-kafka
